// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mermaid remark plugin does nothing if there's no mermaid code block 1`] = `
"


const layoutProps = {
  
};
const MDXLayout = "wrapper"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType="MDXLayout">
    <h1>{\`Heading 1\`}</h1>
    <p>{\`No Mermaid diagram :(\`}</p>
    <pre><code parentName="pre" {...{
        "className": "language-js"
      }}>{\`this is not mermaid
\`}</code></pre>
    </MDXLayout>;
}
;
MDXContent.isMDXComponent = true;"
`;

exports[`mermaid remark plugin works for basic mermaid code blocks 1`] = `
"


const layoutProps = {
  
};
const MDXLayout = "wrapper"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType="MDXLayout">
    <h1>{\`Heading 1\`}</h1>
    <mermaid {...{
      "value": "graph TD;/n    A-->B;/n    A-->C;/n    B-->D;/n    C-->D;"
    }}></mermaid>
    </MDXLayout>;
}
;
MDXContent.isMDXComponent = true;"
`;
